# tess-label

./: .gitattributes  .gitignore  MANIFEST.in  README.md  TODO  events.md  pyproject.toml  setup.cfg
scripts/: tess-label
src/tesslabel/: __init__.py  __main__.py  _version.py  utils.py
src/tesslabel/cli/: service.py
src/tesslabel/dbase/: dao.py  service.py  tables.py
src/tesslabel/dbase/sql/: schema.sql
src/tesslabel/dbase/sql/initial/: config.sql
src/tesslabel/gui/: application.py  service.py
src/tesslabel/gui/controller/: application.py  batch.py  mainpanel.py  preferences.py  statusbar.py
src/tesslabel/gui/preferences/: __init__.py  base.py  refphot.py  testphot.py
src/tesslabel/gui/resources/about/: ack.txt  descr.txt
src/tesslabel/gui/widgets/: about.py  mainpanel.py  writezp.py
src/tesslabel/photometer/: service.py
src/tesslabel/photometer/protocol/: payload.py  photinfo.py  tas.py  tessp.py  tessw.py
