[metadata]
name = tess-label
#version = attr:tess-label.__version__
author = Rafael Gonzalez
author_email = rafael08@ucm.es
url = https://github.com/astrorafael/tess-label/
license = MIT
license_files =
    LICENSE
description = TESS-W labelling tool
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Atmospheric Science
    Framework :: Twisted
    Natural Language :: English

[options]
packages = find:
package_dir =
    = src
install_requires =
    setuptools>=39.2
    pyserial
    twisted    
    treq      
    pypubsub   
    tabulate   
    Pillow     
#    packaging

[options.packages.find]
where = src

[options.package_data]
tesslabel.dbase =
	sql/*.sql
    sql/initial/*.sql
    sql/updates/*.sql

[bdist_wheel]
universal = 1
